/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.tenant.management.service;

import "google/api/annotations.proto";


message Tenant {
    int32 tenantId = 1;
    string tenantName = 2;
    string requesterEmail = 3;
    string domain = 4;
    string tenantAdminFirstName = 5;
    string tenantAdminLastName = 6;
    string tenantURI = 7;
    repeated string redirectURIs = 8;
    string logoURI = 9;
    string scope = 10;
    repeated  string contacts = 11;
}

message CreateTenantRequest {
    Tenant tenant = 2;
}

message CreateTenantResponse {
    Tenant tenant = 1;
}

service  TenantManagementService {
    rpc createTenant(CreateTenantRequest) returns (Tenant) {
        option(google.api.http) = {
           post: "/tenant-management/v1.0.0/tenant"
           body: "tenant"
   };
    }
}